# doom-nukem

./: .gitignore  CMakeLists.txt  Makefile  README.md  oldmain.c  oldmain.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
ext/: CMakeLists.txt
ext/libft/: CMakeLists.txt  Makefile
ext/libft/src/fs/: fs_4.c
ext/libftx/: CMakeLists.txt  Makefile
ext/libftx/include/: libftx.h
ext/libftx/src/: exit.c  vec.c
include/: dukem.h  wolf.h  wolf3d.h
include/dukem/: level.h  tile.h  vector.h
include/wolf/: display.h  field.h  game.h  gpu.h  hero.h  math.h  me.h  render.h  world.h
lib/libft/: CMakeLists.txt
lib/libft/include/libft/: io.h  tys.h
lib/libft/src/ds/: map.c
lib/libft/src/io/: ifs_2.c
lib/libft/src/str/: memccpy.c  memchr.c  memcpy.c  memset.c
lib/libftx/: CMakeLists.txt
lib/libftx/include/: libftx.h
lib/libftx/include/libftx/: hit.h  line.h  math.h  point.h
lib/libftx/src/: hit.c  init.c  line.c  math.c  point.c
map/: test01.map  test02.map
scripts/: fixbrew.sh
src/: display.c  dukem.c  field.c  game.c  gpu.c  hero.c  init.c  level.c  main.c  makefile.mk  math.c  math1.c  math2.c  math3.c  math4.c  me.c  raycast.c  render.c  tile.c  world.c
